--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,10 @@
 <div class="home-container">
+     
+  <app-carousal></app-carousal>
 
+  <app-footer></app-footer>
   
-    <main class="main-content">
-      <h1>Welcome to My Application</h1>
-      <p>This is the home page of the application.</p>
-    </main>
-  
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer-content">
         <div class="footer-section about">
           <h2>About Us</h2>
@@ -30,6 +28,6 @@
       <div class="footer-bottom">
         &copy; 2024 MyApplication | All Rights Reserved
       </div>
-    </footer>
+    </footer> -->
   </div>
   
