home-menu added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,6 +2,7 @@
      
   <app-carousal></app-carousal>
 
+  <app-home-menu></app-home-menu>
   <app-footer></app-footer>
   
     <!-- <footer class="footer">
