--- a/src/app/home-menu/home-menu.component.html
+++ b/src/app/home-menu/home-menu.component.html
@@ -1,14 +1,37 @@
 <div class="menu">
-    <div class="icon" data-content="lottery">Lottery</div>
-    <div class="icon" data-content="mini-games">Mini Games</div>
-    <div class="icon" data-content="popular">Popular</div>
-    <div class="icon" data-content="slots">Slots</div>
-    <div class="icon" data-content="pvc">PVC</div>
-    <div class="icon" data-content="fishing">Fishing</div>
-    <div class="icon" data-content="casino">Casino</div>
-    <div class="icon" data-content="sports">Sports</div>
-  </div>
-  <div class="content" id="content">
+    <div class="icon" data-content="lottery">
+        <img src="assets/lottery.png" alt="Lottery">
+        <div class="icon-name">Lottery</div>
+    </div>
+    <div class="icon" data-content="mini-games">
+        <img src="assets/minigames.png" alt="Mini Games">
+        <div class="icon-name">Mini Games</div>
+    </div>
+    <div class="icon" data-content="popular">
+        <img src="assets/popular.png" alt="Popular">
+        <div class="icon-name">Popular</div>
+    </div>
+    <div class="icon" data-content="slots">
+        <img src="assets/slots.png" alt="Slots">
+        <div class="icon-name">Slots</div>
+    </div>
+    <div class="icon" data-content="pvc">
+        <img src="assets/pvc.png" alt="PVC">
+        <div class="icon-name">PVC</div>
+    </div>
+    <div class="icon" data-content="fishing">
+        <img src="assets/fishing.png" alt="Fishing">
+        <div class="icon-name">Fishing</div>
+    </div>
+    <div class="icon" data-content="casino">
+        <img src="assets/casino.png" alt="Casino">
+        <div class="icon-name">Casino</div>
+    </div>
+    <div class="icon" data-content="sports">
+        <img src="assets/sports.png" alt="Sports">
+        <div class="icon-name">Sports</div>
+    </div>
+</div>
+<div class="content" id="content">
     <!-- Content will be displayed here -->
-  </div>
-  
+</div>
