--- a/src/app/home-menu/home-menu.component.css
+++ b/src/app/home-menu/home-menu.component.css
@@ -1,9 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 
 .icon {
@@ -30,11 +24,11 @@ body {
     background-color: #ddd;
 }
 
-/* .icon-name {
+.icon-name {
     margin-top: 8px;
     font-size: 14px;
     color: #333;
-} */
+}
 
 .content {
     margin-top: 20px;
@@ -58,21 +52,9 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  
+    margin-top: 20px;
   }
   
-  .icon {
-    background-color: #f0f0f0;
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
   
   .icon:hover {
     background-color: #ddd;
