--- a/src/app/home-menu/home-menu.component.html
+++ b/src/app/home-menu/home-menu.component.html
@@ -1,35 +1,35 @@
 <div class="menu">
     <div class="icon" data-content="lottery" (click)="toggleCard('lottery')"> 
         <img src="assets/lottery.png" alt="Lottery">
-        <div class="icon-name"></div>
+        <div class="icon-name">Lottery</div>
     </div>
     <div class="icon" data-content="mini-games" (click)="toggleCard('mini-games')">
         <img src="assets/minigames.png" alt="Mini Games">
-        <div class="icon-name"></div>
+        <div class="icon-name">Mini Games</div>
     </div>
     <div class="icon" data-content="popular" (click)="toggleCard('popular')"> 
         <img src="assets/popular.png" alt="Popular">
-        <div class="icon-name"></div>
+        <div class="icon-name">Popular</div>
     </div>
     <div class="icon" data-content="slots" (click)="toggleCard('slots')"> 
         <img src="assets/slots.png" alt="Slots">
-        <div class="icon-name"></div>
+        <div class="icon-name">Slots</div>
     </div>
     <div class="icon" data-content="pvc" (click)="toggleCard('pvc')"> 
         <img src="assets/pvc.png" alt="PVC">
-        <div class="icon-name"></div>
+        <div class="icon-name">PVC</div>
     </div>
     <div class="icon" data-content="fishing" (click)="toggleCard('fishing')"> 
         <img src="assets/fishing.png" alt="Fishing">
-        <div class="icon-name"></div>
+        <div class="icon-name">Fishing</div>
     </div>
     <div class="icon" data-content="casino" (click)="toggleCard('casino')"> 
         <img src="assets/casino.png" alt="Casino">
-        <div class="icon-name"></div>
+        <div class="icon-name">Casino</div>
     </div>
     <div class="icon" data-content="sports" (click)="toggleCard('sports')"> 
         <img src="assets/sports.png" alt="Sports">
-        <div class="icon-name"></div>
+        <div class="icon-name">Sports</div>
     </div>
 </div>
 
