top winners component added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
   <app-carousal></app-carousal>
 
   <app-home-menu></app-home-menu>
+  <app-top-winners></app-top-winners>
   <app-footer></app-footer>
   
     <!-- <footer class="footer">
