--- a/src/app/top-winners/top-winners.component.css
+++ b/src/app/top-winners/top-winners.component.css
@@ -1,8 +1,9 @@
 .winners-section {
     margin-top: 40px;
-    width: 80%;
-    max-width: 600px;
+    /* width: 80%;
+    max-width: 600px; */
     text-align: center;
+    margin-bottom: 5%;
 }
 
 .winners-section h2 {
@@ -31,8 +32,8 @@
 }
 
 .first-winner img {
-    width: 80px;
-    height: 80px;
+    width: 90px;
+    height: 90px;
     border: 3px solid gold;
 }
 
