--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-container">
      
   <app-carousal></app-carousal>
-
+  <app-message-bar></app-message-bar>
   <app-home-menu></app-home-menu>
   <app-top-winners></app-top-winners>
   <app-footer></app-footer>
