--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
 <router-outlet></router-outlet>
 
 
-<app-home></app-home>
+<!-- <app-home></app-home> -->
 
 
 <!-- <app-footer></app-footer> -->
