--- a/src/app/win-go/win-go.component.css
+++ b/src/app/win-go/win-go.component.css
@@ -9,12 +9,14 @@
 .wallet-balance {
   margin-bottom: 20px;
   font-size: 18px;
+
 }
 
 .buttons {
   display: flex;
   justify-content: center;
-  gap: 10px;
+  border-radius: 40%;
+  gap: 15%;
 }
 
 button {
@@ -29,11 +31,13 @@ button {
 .deposit-button {
   background-color: #4caf50; /* Green */
   color: white;
+  border-radius: .53333rem;
 }
 
 .withdraw-button {
   background-color: #f44336; /* Red */
   color: white;
+  border-radius: .53333rem;
 }
 
 .deposit-button:hover {
